# qmlapp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  main.cpp  resources.qrc
qml/: main.qml
